# LIBSVM-Plus

./: COPYRIGHT  Makefile  Makefile.am  Makefile.win  README.plus  configure.ac  index.html  svm-predict.c  svm-train.c  svm.cpp  svm.h
matlab/: svm_model_matlab.c  svmtrain.c
msvc/: msvc.sln  msvc.vcproj
msvc/svm-predict/: svm-predict.vcproj
msvc/svm-scale/: svm-scale.vcproj
msvc/svm-train/: svm-train.vcproj
py-tools/: README.plus  checkdata.py  dense2sparse.py  easy.py  grid.py  sparse2dense.py
